Fixed overflow

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -163,6 +163,8 @@ canvas {
   h4 {
     margin: 0;
     font-family: 'PT Sans', sans-serif;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   h2 {
     margin: 0;
